changed a bunch of css to try and fix image squishing, and got it working :)

--- a/dart-cart-client/src/App.css
+++ b/dart-cart-client/src/App.css
@@ -131,7 +131,7 @@ input[type="checkbox"]{
     color: var(--text-primary);
     background-color: var(--background);
 }
-.card-img-top{
-    width: 18rem;
-    height: 10rem;
+.testIMG{
+    object-fit: contain;
+    max-height: 10rem;
 }
